Fix CSS issue where display: none was not enforced, causing gaps within the sidebar.

--- a/less/forum.less
+++ b/less/forum.less
@@ -64,7 +64,7 @@
 
 .hiddenTag {
   visibility: hidden;
-  display: none;
+  display: none !important;
   max-height: 0;
 }
 
